application/frontend/deploy_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: do-visit-counter-frontend
  labels:
    name: do-visit-counter-frontend
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: do-visit-counter-frontend
  template:
    metadata:
      labels:
        app: do-visit-counter-frontend
    spec:
      containers:
        - name: do-visit-counter-frontend
          image: whgustn28/do-visit-counter-frontend:amd64
          imagePullPolicy: Always
          ports:
            - name: frontend-port
              containerPort: 8000
              protocol: TCP
      tolerations:
      - key: "mgt"
        operator: "Equal"
        value: "present"
        effect: "NoSchedule"
      nodeSelector:
        mgt: present
