application/frontend/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
    name: do-visit-counter-frontend
spec:
    selector:
        app: do-visit-counter-frontend
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8000
